--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Our Team</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem.</p>
+          <h2>Nuestro equipo</h2>
+          <p>Conoce a los mejores veterinarios y especialistas en Jalisco</p>
         </div>
 
         <div class="row">
