se edito la seccion de servicios

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo me-auto">
-       
+        
         <!-- Uncomment below if you prefer to use an image logo -->
         <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
       </div>
@@ -63,23 +63,6 @@
           <li><a class="nav-link scrollto" href="#about">Sobre nosotros</a></li>
           <li><a class="nav-link scrollto" href="#services">Servicios</a></li>
           <li><a class="nav-link scrollto" href="#team">Equipo</a></li>
-         <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li> -->
           <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -102,7 +85,7 @@
             <div class="carousel-container">
               <div class="carousel-content container">
                 <h2 class="animate__animated animate__fadeInDown">Los mejores <span>especialistas</span></h2>
-                <p class="animate__animated animate__fadeInUp">En veterinaria "Dogtor" encontrará a los mejores médicos veterinarios y zootecnistas de Guadalajara.</p>
+                <p class="animate__animated animate__fadeInUp">En veterinaria Chikorita encontrará a los mejores médicos veterinarios y zootecnistas de Guadalajara.</p>
                 <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Leer más</a>
               </div>
             </div>
@@ -160,7 +143,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bx bx-gift"></i></div>
               <h4 class="title"><a href="">Recompensamos su lealtad</a></h4>
-              <p class="description">En veterinaria Dogtor agadecemos su lealtad, ¡obtenga su registro de cliente frecuente!</p>
+              <p class="description">En veterinaria Chikorita agadecemos su lealtad, ¡obtenga su registro de cliente frecuente!</p>
             </div>
 
           </div>
@@ -255,30 +238,20 @@
             <h4 class="title"><a href="">Psicología animal</a></h4>
             <p class="description">¿tu mascota tiene problemas de conducta?, ¿se estresa demasiado?, ¿está deprimido?, nosotros podemos ayudarlo.</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bi bi-bounding-box"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-          </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-globe"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            <h4 class="title"><a href="">Red de sucursales</a></h4>
+            <p class="description">Contamos con muchas sucursales y negocios asociados, ¡encuentre los más cercanos a usted!</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-broadcast"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+            <h4 class="title"><a href="">Alta disponibilidad</a></h4>
+            <p class="description">Contamos con servicio de emergencias 24/7</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-calendar2-week"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <h4 class="title"><a href="">Agenda de servicios</a></h4>
+            <p class="description">Puede agendar cita a través de cualquier medio de contacto o red social</p>
           </div>
         </div>
 
